# wdcrypt

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  setup.py  test-wdcrypt.py
.github/workflows/: release.yml  rust.yml
src/: core.rs  encryption.rs  file_utils.rs  main.rs  models.rs  utils.rs
wdcrypt/: cli.py  decrypt.py  encrypt.py
