[package]
name = "wdcrypt"
version = "2.2.4"
authors = ["Stefin <stefin@pm.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/stefins/wdcrypt"
description = "CLI to encrypt the current working directory with Fernet encryption"
exclude = [
    ".github/"
]

[dependencies]
tar = "0.4.38"
fernet = {version = "0.2.0", default-features = false, features = ["rustcrypto"]}
clap = "4.1.13"
threadpool = "1.8.1"
num_cpus = "1.15"

[dev-dependencies]
getrandom = {version =  "0.2", features = ["js"]}