[package]
name = "wdcrypt"
version = "2.3.2"
authors = ["Stefin <stefin@pm.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/stefins/wdcrypt"
description = "CLI to encrypt the current working directory with Fernet encryption"
exclude = [
    ".github/"
]

[dependencies]
tar = "0.4.41"
fernet = {version = "0.2.2", default-features = false, features = ["rustcrypto"]}
clap = "4.5.13"
threadpool = "1.8.1"
num_cpus = "1.16"

[dev-dependencies]
getrandom = {version =  "0.2", features = ["js"]}
